[package]
name = "dsp"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
bytes = "1.10.1"
dashmap = "6.1.0"
similar = "2.6.0"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http2"] }
hyper-util = "0.1.16"
metrics = "0.24.2"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = "0.3.20"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"
