[package]
name = "bpx"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
async-trait = "0.1.89"
bytes = "1.10.1"
dashmap = "6.1.0"
similar = "2.6.0"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"

[[bench]]
name = "bpx_vs_rest"
harness = false
